### Unreleased
## YYYY-MM-DD
* tox: add HTML and branch coverage to pytest (written to `./htmlcov`)
* tox: flake8 now excludes `/build` and `/venv` directories

### 2.6.0
## 2023-10-19
* improve output of debug_host
* tox: remove envdir optimizations (no more supported by tox v4)
* tox: add commands to allowlist_externals
* debug_host: rename mangecode to managecode (typo)
* New: `pcc-debug-presentation` script to render HTML templates without a
  compilation, to be used to quickly test Jinja2 rendering.
* Use Jinja2 macros for links to Gerrit and Jenkins and capitalize them since
  they are proper nouns.
* New: add style to HTML output
* Fix: cancelled hosts in HTML output had a lonely </a>
* Fix: close h3 elements in HTML output index page.
* Add some flow control for parameter diffs

### 2.5.7
## 2022-05-03
* Fix XSS bug T346216

### 2.5.6
## 2022-05-03
* Checkout test patch to a patch to clean up output (gerrit:914754)
* tox: use default python for local testing (gerrit:914747)
* tox: do not skip missing interpreters on CI (gerrit:914746)

### 2.5.4
## 2022-12-19
* Fix: Correct fulldiff

### 2.5.3
## 2022-12-09
* Fix: handle a blank CHANGE_PRIVATE gracefully

### 2.5.2
## 2022-11-18
* Fix: Skip new files when processing auto selector - T323282
* Fix: add additional return code descriptions

### 2.5.1
## 2022-11-15
* Fix: Exclude Class from core type

## 2022-11-15
### 2.5.0
* Add option to run against one production and one cloud host - T289666
* Add gerrit change id to output dir
* Add ability to filter for core resources
* Add support for concat_fragment content
* Add support for specifying different private repo change if - T265633
* Store pson catalogs as gziped files
* Fix issue resulting in hosts getting shifted to the wrong list - T224977
* Fix issue when only one result is returned

## 2022-11-7
### 2.4.2
* For auto selector only analyse manifest fils

## 2022-11-1
### 2.4.1
* Fix title parsing

## 2022-10-31
### 2.4.0
* Pin setuptools