@@ -2,6 +2,7 @@
 ## YYYY-MM-DD
 * tox: add HTML and branch coverage to pytest (written to `./htmlcov`)
 * tox: flake8 now excludes `/build` and `/venv` directories
+* New: add a `build.json` to represent the output of a build
 
 ### 2.6.0
 ## 2023-10-19
